# PowerGL-Editor

./: README.md  configure.ac
src/: Makefile.am  editor.c  editor_app.c  editor_app.h  editor_scene.c  editor_scene.h  editor_text_object.c  editor_text_object.h
