#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([PowerGL-Editor], [0.1.0], [omerfarukkalkan@outlook.com.tr])
AC_CONFIG_SRCDIR([src/editor_scene.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE
# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
# Checks for libraries.
AC_CHECK_LIB([powergl], [powergl_resize])
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
# Checks for library functions.


AC_CONFIG_FILES([Makefile
		src/Makefile])
AC_OUTPUT
